fix price alignment in home page

--- a/client/main.css
+++ b/client/main.css
@@ -93,7 +93,7 @@ h1, h2 {
 
 .price-toggle {
     position: absolute;
-    top: 445px;
+    top: 463px;
     margin-left: 148px;
 }
 
